One reference added
git-svn-id: https://svn.mccode.org/svn/McStasTeX@93 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -364,3 +364,10 @@
    year      = {1967},
    publisher = {Academic Press, London}
 }
+
+@book{ILLblue,
+  author    = {A.-J. Dianoux and G. Lander},
+   title     = {ILL Neutron Data Booklet},
+   year      = {2003},
+   publisher = {OCP Science}
+}
