Cosmetic adjustments move details on random numbers to Appendix
git-svn-id: https://svn.mccode.org/svn/McStasTeX@94 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Component_manual.tex
+++ b/trunk/Component_manual.tex
@@ -45,7 +45,7 @@
 
 \newcommand{\MCS}{{McStas}}
 \newcommand{\version}{{1.9}}
-\newcommand{\reldate}{{October 15, 2005}}
+\newcommand{\reldate}{{October 31, 2005}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
@@ -84,8 +84,8 @@
 %\listoftables
 
 \include{preface_comp}
-\include{techniq}
 \include{comp}
+\include{techniq}
 \include{sources}
 \include{optics}
 \include{samples}
@@ -97,6 +97,7 @@
 %\include{compcode}   % removed: too heavy !!
 %\include{instcode}
 %\include{test}       % contained instr_examples
+\include{random}
 \include{terms}       % as in manual
 
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Bibliography}}
