--- a/trunk/preface.tex
+++ b/trunk/preface.tex
@@ -10,9 +10,11 @@ whereas only little knowledge about simulation techniques is
 required. In a few places, we also assume familiarity with the
 use of the C programming language and UNIX/Linux.
 
-It is a pleasure to thank Prof.~Kurt N.~Clausen for his continuous
+It is a pleasure to thank Prof.~Kurt N.~Clausen, PSI, for his continuous
 support to this project and for having initiated \MCS\ in the first
-place. Essential support has also been given by Prof.~Robert McGreevy.
+place. Essential support has also been given by Prof.~Robert McGreevy, ISIS.
+Apart from the authors of this manual, also Per-Olof \AA strand, NTNU Trondheim,
+has contrubuted to the development of the \MCS\ system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -31,10 +33,12 @@ community, too numerous to mention here.
 %users to contribute components with manual entries for inclusion in
 %future versions of \MCS.
 
-In case of any errors, questions, or suggestions, %or other need for support should arise,
-%do not hesitate to
+In case of errors, questions, or suggestions, 
+%or other need for support should arise,
+do not hesitate to
 contact the authors at \verb+mcstas@risoe.dk+
-or consult the \MCS\ WWW home page~\cite{mcstas_webpage}. A special bug/request reporting service is available \cite{mczilla_webpage}.
+or consult the \MCS\ WWW home page~\cite{mcstas_webpage}. 
+A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+neutron-mc@risoe.dk+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
 \begin{itemize}
