--- a/trunk/preface_comp.tex
+++ b/trunk/preface_comp.tex
@@ -19,11 +19,11 @@ the C programming language.
 %We especially like to thank Kristian Nielsen for laying a solid foundation
 %for the \MCS\ system, which the authors of this manual benefit from daily.
 
-It is a pleasure to thank Dir.~Kurt N.~Clausen for his continuous
+It is a pleasure to thank Dir.~Kurt N.~Clausen, PSI, for his continuous
 support to \MCS\ and for having initiated the project.
-Continuous support to \MCS\ has also come from Prof.~Robert McGreevy.
-Apart from the authors of this manual,
-also Per-Olof \AA strand has contributed to the development of the \MCS\ system.
+Continuous support to \MCS\ has also come from Prof.~Robert McGreevy, ISIS.
+Apart from the authors of this manual, also Per-Olof \AA strand, NTNU Trondheim,
+has contributed to the development of the \MCS\ system.
 %Both he and our other collaborators, Henrik M.\ R\o nnow and Mark
 %Hagen have made major contributions to the project.  Also the
 %contributions from our test users, the students Asger Abrahamsen, Niels
@@ -77,7 +77,7 @@ and benchmarking in simple cases}
   \begin{itemize}
   \item \verb+Phonon_simple+ An isotropic acoustic phonon (K. Lefmann, Ris\o)
   \item \verb+PowderN+. N lines powder diffraction (P.K. Willendrup, Ris\o)
-  \item \verb+Sans_spheres+ hard spheres in thin solution, mono disperse (L. Arleth, the Royal Veterinary and Agricultural University (DK), Kim Lefmann, Ris\o )
+  \item \verb+Sans_spheres+ hard spheres in thin solution, mono disperse (L. Arleth, the Royal Veterinary and Agricultural University (DK), K. Lefmann, Ris\o )
   \item \verb+Isotropic_Sqw+ isotropic inelastic sample (powder, liquid, glass)
 elastic/inelastic scattering from $S(q,\omega)$ data (E. Farhi, V. Hugovieux, ILL)
   \item \verb+SANS_*+ A collection of samples for SANS (H. Frielinghaus,  FZ-J\"ulich)
