--- a/trunk/abstract_comp.tex
+++ b/trunk/abstract_comp.tex
@@ -1,6 +1,6 @@
 The software package McStas is a tool for carrying out Monte Carlo
 ray-tracing simulations of neutron scattering instruments with high
-complexity and precision. The simulations can compute all aspects of the
+complexity and precision. The simulations can compute most aspects of the
 performance of instruments and samples 
 and can thus be used to optimize the use of existing equipment, 
 design new instrumentation, and carry out full virtual experiments. 
