--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -8,7 +8,7 @@ techniques used in \MCS. We first explain the concept of the neutron
 weight factor, and discuss the statistical errors in dealing with sums
 of neutron weights.  Secondly, we give an expression for how the weight
 factor transforms under a Monte Carlo choice and specialize this
-to the concept of focusing components.  Finally, we present a way of
+to the concept of direction focusing.  Finally, we present a way of
 generating random numbers with arbitrary distributions.
 
 \section{Introduction}
@@ -55,7 +55,7 @@ a better accuracy. What we just sketched is nothing else than the basis
 of the Monte-Carlo (MC) method \cite{James80}, 
 applied to neutron ray-tracing instrumentation.
 
-\subsubsection{Monte Carlo ray tracing simulations}
+\subsection{Monte Carlo ray tracing simulations}
 Mathematically, the Monte-Carlo method is an application of the law of large numbers \cite{James80,Grimmett92}. Let $f(u)$ be a finite continuous integrable function of parameter $u$ for which an integral estimate is desirable. The discrete statistical mean value of $f$ (computed as a series) in the uniformly sampled interval $a < u < b$ converges to the mathematical mean value of $f$ over the same interval.
 
 \begin{equation}
@@ -64,23 +64,35 @@ Mathematically, the Monte-Carlo method is an application of the law of large num
 
 In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but regularly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
 
-Eventhough early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
+Although early implementations of the method for neutron instruments used \emph{home-made} computer programs  (see e.g. papers by J.R.D. Copley, D.F.R. Mildner, J.M. Carpenter, J. Cook), more general packages have been designed, providing models for most parts of the simulations.
 These present existing packages are: NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_pb,mcstas_webpage}, Vitess \cite{Vitess,vitess_webpage}, and IDEAS \cite{IDEAS}.
 Their usage usually covers all types of neutron spectrometers, most of the time through a user-friendly graphical interface, without requiring programming skills.
 
-The neutron ray-tracing Monte-Carlo method has been used widely for e.g. guide studies \cite{Copley93,Farhi02,Schanzer04}, instrument optimization and design \cite{Zsigmond04,Lieutenant05}. Most of the time, the conclusions and general behaviour of such studies may be obtained using the classical analytical approaches, but accurate estimates for the flux, the resolutions and generally the optimum parameter set, benefit advantageously from MC methods.
+The neutron ray-tracing Monte-Carlo method has been used widely for 
+{\em e.g.}\ guide studies \cite{Copley93,Farhi02,Schanzer04}, 
+instrument optimization and design \cite{Zsigmond04,Lieutenant05}. 
+Most of the time, the conclusions and general behaviour of such studies 
+may be obtained using the classical analytical approaches, 
+but accurate estimates for the flux, the resolutions, 
+and generally the optimum parameter set, benefit advantageously from MC methods.
 
-\section{The neutron weight, $p$}
+Recently, the concept of virtual experiments, {\em i.e.}\ full simulations
+of a complete neutron experiment, has been suggested as the main 
+goal for neutron ray-tracing simulations \cite{lefmann05}. The goal is that
+simulations should be of benefit to not only instrument builders, but also
+to users for training, experiment planning, diagnostics, and data analysis.
+
+\section{The neutron weight}
 \label{s:probweight}
 A totally realistic semi-classical simulation will require that
 each neutron is at any time either present or lost.
-In many set-ups, {\em e.g.} triple axis spectrometers, only a very
+In many instruments, only a very
 small fraction of the initial neutrons will ever be detected, and
 simulations of this kind will therefore waste much time in dealing
 with neutrons that never hit the detector.
 
 An important way of speeding up calculations is to introduce
-a neutron weight for each simulated neutron ray and to
+a neutron "weight factor" for each simulated neutron ray and to
 adjust this weight according to the path of the ray.
 If {\em e.g.}\ the reflectivity of a certain
 optical component is 10\%, and only reflected neutrons ray are
@@ -92,8 +104,8 @@ would require in average ten incoming neutrons for each reflected one.
 
 Let the initial neutron weight be $p_0$ and let us denote the weight
 multiplication factor in the $j$'th component by $\pi_j$.  The resulting
-weight factor for the neutron ray after passage of the whole instrument is
-equal to the product of all the contributions
+weight factor for the neutron ray after passage of the whole instrument 
+becomes the product of all contributions
 \begin{equation}
 \label{e:probprod}
 p = p_0 \prod_{j=1}^n \pi_j .
@@ -104,13 +116,13 @@ during the simulation.
 Simulation by weight adjustment is performed
 whenever possible. This includes
 \begin{itemize}
-\item Transmission through filter.
+\item Transmission through filters.
 \item Transmission through Soller blade collimator
  (in the approximation
  which does not take each blade into account).
 \item Reflection from monochromator (and analyser) crystals
  with finite reflectivity and mosaicity.
-\item passage of a continuous beam through a chopper.
+\item Passage of a continuous beam through a chopper.
 \item Scattering from samples.
 \end{itemize}
 
@@ -118,7 +130,7 @@ whenever possible. This includes
 \label{s:staterror}
 
 In a typical simulation, the result will consist of a
-count of neutrons ray with different weights. The
+count of neutrons histories ("rays") with different weights. The
 sum of these weights is an estimate of the mean number of neutrons 
 hitting the monitor (or detector) per second in a ``real'' experiment.
 One may write the counting result as
@@ -126,12 +138,11 @@ One may write the counting result as
 \label{psum}
 I = \sum_i p_i = N \overline{p} ,
 \end{equation}
-where $N$ is the number of neutrons in the detector and the vertical bar denote
-averaging.
+where $N$ is the number of neutrons in the detector and the vertical bar 
+denote averaging.
 By performing the weight transformations, the (statistical)
-mean value of $I$ is unchanged.
-However, $N$ will in general be enhanced,
-and this will improve the statistics of the simulation.
+mean value of $I$ is unchanged. However, $N$ will in general be enhanced,
+and this will improve the accuracy of the simulation.
 
 To give an estimate of the statistical error, we proceed as follows:
 Let us first for simplicity assume that all the counted neutron weights are
@@ -143,38 +154,40 @@ with the uncertainty $\sigma(N) = \sqrt{N}$
 situation where the detector counts a large fraction of the
 neutrons in the simulation, but we will neglect that for now.}.
 Hence, the statistical uncertainty of the observed intensity becomes
-\begin{equation}
+\begin{equation} \label{e:sigI1}
  \sigma(I) = \sqrt{N} \overline{p} = I / \sqrt{N} ,
 \end{equation}
 as is used in real neutron experiments (where $\overline{p} \equiv 1$).
 For a better approximation we return to Eq.~(\ref{psum}).
 Allowing variations in both $N$ and $\overline{p}$,
 we calculate the variance of the resulting intensity,
-assuming that the two variables are independent and both follow
-a Gaussian distribution.
+assuming that the two variables are independent:
 \begin{equation}
-\sigma^2(I) = \sigma^2(N) \overline{p}^2 + N^2 \sigma^2(\overline{p})
-            = N \overline{p}^2 + N^2 \sigma^2(\overline{p}) .
+\sigma^2(I) = \sigma^2(N) \overline{p}^2 + N^2 \sigma^2(\overline{p}) .
 \end{equation}
-Assuming that the individual weights, $p_i$, follow a Gaussian distribution
-(which in many cases is far from the truth)
-we have $N^2 \sigma^2(\overline{p}) = \sigma^2(\sum_i p_i) = N
-\sigma^2(p_i)$
+Assuming that $N$ follows a normal distribution, we reach 
+$\sigma^2(N) \overline{p}^2 = N \overline{p}^2$.
+Further, assuming that the individual weights, $p_i$, 
+follow a Gaussian distribution (which in many cases is far from the truth)
+we have 
+$N^2 \sigma^2(\overline{p}) = \sigma^2(\sum_i p_i) = N \sigma^2(p_i)$
 and reach
 \begin{equation}
 \sigma^2(I) = N \left( \overline{p}^2 + \sigma^2(p_i) \right).
 \end{equation}
 The statistical variance of the $p_i$'s is estimated by
-$\sigma^2(p_i) \approx (N-1)^{-1} (\sum_i p_i^2 - N \overline{p}^2)$.
+$\sigma^2(p_i) \approx  (\sum_i p_i^2 - N \overline{p}^2) / (N-1)$.
 The resulting variance then reads
 \begin{equation}
 \sigma^2(I) = \frac{N}{N-1} \left( \sum_i p_i^2 - \overline{p}^2  \right) .
 \end{equation}
-For large values of $N$, this is very well approximated
+For almost any positive value of $N$, this is very well approximated
 by the simple expression
 \begin{equation}
 \sigma^2(I) \approx \sum_i p_i^2 .
 \end{equation}
+As a consistency check, we note that for all $p_i$ equal, this reduces to
+eq.~(\ref{e:sigI1})
 
 In order to compute the intensities and uncertainties, the detector components
 in \MCS\ thus must keep track of
@@ -186,7 +199,8 @@ When a Monte Carlo choice must be performed, {\em e.g.} when the
 initial energy and direction of the neutron ray is decided at the source,
 it is important to adjust the neutron weight so that the combined
 effect of neutron weight change and Monte Carlo probability
-equals the actual physical properties of the component.
+of making this particular choice
+equals the actual physical properties we like to model.
 
 Let us follow up on the example of a source.
 In the ``real'' semi-classical world, there is a distribution
@@ -210,7 +224,7 @@ f_{\rm MC}(E,\Ombold,{\bf r}) \pi_j(E,\Ombold,{\bf r})
 %are taken into account.
 
 The weight factor transformation rule Eq.~(\ref{probrule})
-is of course also valid for other types of Monte Carlo choices,
+is equally valid for other types of Monte Carlo choices,
 although the probability distributions may depend upon
 different parameters. An important example
 is elastic scattering from a powder sample,
@@ -224,15 +238,15 @@ weight adjustments described in
 subsection \ref{s:probweight} to yield the final neutron
 weight given by Eq.~(\ref{e:probprod}).
 
-\subsection{Focusing components}
+\subsection{Direction focusing}
 \label{s:focus}
-An important application of weight transformation is focusing.
+An important application of weight transformation is direction focusing.
 Assume that the sample scatters the neutron rays in many directions.
 In general, only neutron rays in some of these directions will
 stand any chance of being detected. These directions we call
 the {\em interesting directions}.
 The idea in focusing is to avoid wasting computation time on
-neutrons scattered in the uninteresting directions.
+neutrons scattered in the other directions.
 This trick is an instance of what in Monte Carlo terminology
 is known as {\em importance sampling}. % \cite{importance}.
 
@@ -242,75 +256,19 @@ directions are known to be contained within a certain
 solid angle interval $\Delta \Ombold$, only these solid angles
 are used for the Monte Carlo choice of scattering direction.
 According to Eq.~(\ref{probrule}), the weight factor will then have
-to be changed by the (fixed) amount
+to be changed by the amount
 $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
-during a "correct" focusing, while a too narrow focusing will
-result in a lower (\textit{i.e.} wrong) intensity, since one cuts
-away neutrons rays that would otherwise have counted.
+during a "correct" direction focusing, while a too narrow focusing will
+result in a lower (\textit{i.e.} wrong) intensity, since 
+we cut neutrons rays that should have counted.
 
-Another strategy is adaptive importance sampling, % \cite{importance},
+\subsection{Adaptive sampling}
+Another strategy to improve sampling in simulations
+is adaptive importance sampling, % \cite{importance},
 where \MCS\ during the simulations will determine
 the most interesting directions and gradually change
-the focusing according to that. A first implementation of this idea is
-found in the Source\_adapt component.%, described in section~\ref{s:Source_adapt}.
-
-\section{Transformation of random numbers}
-In order to perform the Monte Carlo choices, one needs to be able to
-pick a random number from a given distribution. However, most
-random number generators only give
-uniform distributions over a certain interval.
-We thus need to be able to transform between probability distributions,
-and we here give a short explanation on how to do this.
-
-Assume that we pick a random number, $x$, from a distribution $\phi(x)$.
-We are now interested in the shape of the distribution, $\Psi(y)$, of the
-transformed $y=f(x)$, assuming $f(x)$ is monotonous.
-All random numbers lying in the interval $[x; x+dx]$
-are transformed to lie within the interval $[y; y+f'(x)dx]$, so the
-resulting distribution must be $\Psi(y) = \phi(x) / f'(x)$.
-
-If the random number generator selects numbers uniformly in the interval
-$[0; 1]$, we have $\phi(x) = 1$, and
-one may evaluate the above expression further
-\begin{equation}
-\Psi(y) = \frac{1}{f'(x)} = \frac{d}{dy} f^{-1}(y) .
-\end{equation}
-By indefinite integration we reach
-\begin{equation}
-\label{e:randtrans}
-\int \Psi(y) dy = f^{-1}(y) = x ,
-\end{equation}
-which is the essential formula for finding the right transformation
-of the initial random numbers.
-Let us illustrate with a few examples of transformations relevant for the
-\MCS\ components.
-
-\paragraph{The circle}
-For finding a random point within the
-circle of radius $R$, one would like to choose the polar angle from a uniform
-distribution in $[0; 2\pi]$ and the radius from the normalised distribution
-$\phi(r)=2r/R^2$.
-The polar angle is found simply by multiplying a random number
-with $2\pi$. For the radius, we like to find $r=f(x)$, where again $x$
-is the generated random number. Left side of Eq.~(\ref{e:randtrans}) gives
-$\int \Psi(r) dr = \int 2 r/R^2 dr = r^2/R^2$, which should equal $x$.
-Hence $r = R\sqrt{x}$.
-
-\paragraph{The sphere}
-For finding a random point on the surface of the unit sphere,
-one needs to determine the two angles, $(\theta, \psi)$.
-As for a circle, $\psi$ is chosen from a uniform distribution
-in $[0; 2\pi]$. The probability distribution of $\theta$ should be
-$\phi(\theta)=\sin(\theta)$ (for $\theta \in [0; \pi/2 ]$),
-whence $\theta=\cos^{-1}(x)$.
-
-\paragraph{Exponential decay}
-In a simple time-of-flight source, the neutron flux decays exponentially
-after the initial activation at $t=0$. We thus want to pick an initial
-neutron emission time from the normalised distribution
-$\phi(t) = \exp(-t/\tau) / \tau$.
-Use of Eq.~(\ref{e:randtrans}) gives
-$x = - \exp(-t/\tau)$, which is a number in the interval $[-1; 0]$.
-If we want to pick a positive random number instead, we will have
-to change sign by $x_1 = -x$ and thus reach $t = - \tau \ln (x_1)$.
+the focusing according to that. 
+Implementation of this idea is
+found in the {\bf Source\_adapt} and {\bf Source\_optimizer} components.
+%, described in section~\ref{s:Source_adapt}.
