--- a/trunk/samples.tex
+++ b/trunk/samples.tex
@@ -79,6 +79,17 @@ of the samples.
   }
   \end{center}
 \end{table}
+\subsection{Neutron scattering notation}
+iIn sample component, we use the notation common for neutron scattering,
+where the wave vector transfer os denoted the {\em scattering vector}
+\begin{equation} \label{eq:q-transfer}
+{\bf q} \equiv {\bf k}_{\rm i} - {\bf k}_{\rm f} .
+\end{equation}
+In analygo, the {\em energy transfer} is given by
+\begin{equation} \label{eq:w-transfer}
+\hbar \omega \equiv E_{\rm i} - E_{\rm f} =
+\frac{\hbar^2}{2 m_{\rm n}} \left( k_{\rm i}^2 - k_{\rm f}^2 \right) . 
+\end{equation}
 
 \input{vanadium.tex}         \newpage
 \input{powder2.tex}          \newpage
